--- a/index.ipynb
+++ b/index.ipynb
@@ -466,22 +466,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'city': 'Las Vegas', 'state': 'Nevada'}"
+       "{'city': 'Las Vegas', 'state': 'Nevada', 'country': 'USA'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict(city=\"Las Vegas\", state=\"Nevada\", )"
+    "dict(city=\"Las Vegas\", state=\"Nevada\", country=\"USA\")"
    ]
   },
   {
